--- a/public/style.scss
+++ b/public/style.scss
@@ -8,6 +8,31 @@ body {
 
                     img {
                         height: 100%;
+                        display:block;
+                        margin:auto;
+                    }
+                }
+                .active {
+                    border: 3px solid #dc3545;
+                    background-image: url(../images/ash.png);
+                    background-size: 4rem;
+                    background-repeat: no-repeat;
+                    background-position: center;
+
+                    img {
+                        display: none;
+                    }
+                }
+                .score {
+                    text-align: center;
+                    padding-top: 10rem;
+
+                    span {
+                        font-family: 'Pangolin', cursive;
+                    }
+                    h1 {
+                        font-size: 10rem;
+                        font-family: 'Press Start 2P', cursive;
                     }
                 }
             }
