--- a/public/style.scss
+++ b/public/style.scss
@@ -8,8 +8,15 @@ body {
 
                     img {
                         height: 100%;
-                        display:block;
-                        margin:auto;
+                        display: block;
+                        margin: auto;
+                    }
+
+                    span {
+                        color: #ddd;
+                        font-size: 10px;
+                        position: absolute;
+                        top: 0;
                     }
                 }
                 .active {
@@ -28,11 +35,11 @@ body {
                     padding-top: 10rem;
 
                     span {
-                        font-family: 'Pangolin', cursive;
+                        font-family: "Pangolin", cursive;
                     }
                     h1 {
                         font-size: 10rem;
-                        font-family: 'Press Start 2P', cursive;
+                        font-family: "Press Start 2P", cursive;
                     }
                 }
             }
